--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald&family=Roboto:ital,wght@0,100..900;1,100..900&family=Special+Gothic&display=swap" rel="stylesheet">
-    <title>CSS Projeto </title>
+    <title>CSS Projeto css </title>
 </head>
 
 <body>
